Fix owrank command. Fix russian (probably others too) characters so they are supported in the database. Some optimizations.